# questscribe

./: .gitignore  CICD_GUIDE.md  LICENSE  PLATFORM_COMPATIBILITY.md  README.md  generate-icons.js  index.html  package-lock.json  package.json  setup.ps1  vite_config.js
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml  test-tag-trigger.yml  test.yml
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src/components/: ContextMenu.jsx  Editor.jsx  EditorToolbar.jsx  MarkerDialog.jsx  Sidebar.jsx  StatusBar.jsx  schema.js
src/utils/: spellChecker.js  updateChecker.js
