[package]
name = "litrpg-writer"
version = "0.1.0"
description = "A word processor for writing LitRPG novels"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
