[package]
name = "questscribe"
version = "0.2.0"
description = "QuestScribe - A word processor for writing LitRPG novels with character state tracking"
authors = ["QuestScribe Team"]
license = "MIT"
repository = "https://github.com/theserialhobbyist/questscribe"
homepage = "https://github.com/theserialhobbyist/questscribe"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "window-close", "dialog-confirm", "window-set-focus", "window-show", "window-hide", "window-center", "dialog-ask", "fs-write-file", "fs-read-file", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
docx-rs = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
